--- a/active_user.html
+++ b/active_user.html
@@ -26,7 +26,7 @@
     <script>
 
 function display_chart(){
-    $.getJSON('/data/active_user.js', function(result){
+    $.getJSON('/data/active_user.js?v='+(+new Date()), function(result){
         var data = result['data'];
         var cat = result['cat'];
         $('#container').highcharts({
