--- a/lapsing_rate.html
+++ b/lapsing_rate.html
@@ -26,7 +26,7 @@
     <script>
 
 function display_chart(){
-    $.getJSON('/data/lapsing_rate.js', function(result){
+    $.getJSON('/data/lapsing_rate.js?v='+(+new Date()), function(result){
         var data = result['data'];
         var cat = result['cat'];
         $('#container').highcharts({
