--- a/pv.html
+++ b/pv.html
@@ -26,7 +26,7 @@
     <script>
 
 function display_chart(){
-    $.getJSON('/data/pv.js', function(result){
+    $.getJSON('/data/pv.js?v='+(+new Date()), function(result){
         var data = result['data'];
         var cat = result['cat'];
         $('#container').highcharts({
