--- a/registration_by_day.html
+++ b/registration_by_day.html
@@ -26,7 +26,7 @@
     <script>
 
 function display_chart(){
-    $.getJSON('/data/new_user.js', function(result){
+    $.getJSON('/data/new_user.js?v='+(+new Date()), function(result){
         var data = result['data'];
         var cat = result['cat'];
         $('#container').highcharts({
