add revival page.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <li><a href="/active_user.html" target="main">活跃用户量</a></li>
             <li><a href="/registration_by_day.html" target="main">新用户量</a></li>
             <li><a href="/lapsing_rate.html" target="main">流失率</a></li>
-            <li><a href="/pv.html" target="main">注册首日、首周 PV</a></li>
+            <li><a href="/revival_rate.html" target="main">死亡率</a></li>
+            <!-- <li><a href="/pv.html" target="main">注册首日、首周 PV</a></li> -->
           </ul>
         </div>
         <div class="span10">
