update plot options.

--- a/active_user.html
+++ b/active_user.html
@@ -51,7 +51,13 @@ function display_chart(){
                       color: '#808080'
                   }]     
               },
-        
+              plotOptions: {
+                          series: {
+                              marker: {
+                                  enabled: false
+                              }
+                          }
+              },
               series: data
           });
     });
