--- a/revival_rate.html
+++ b/revival_rate.html
@@ -43,7 +43,7 @@ function display_chart(){
               },
               yAxis:{
                 title:{
-                  text: '留存率'  
+                  text: '复活率'  
                 },
                 plotLines: [{
                       value: 0,
